# weather-app

./: Cargo.toml  Makefile  README.md
config/: rust.example.yaml  web.example.yaml
scripts/: generate_json.sh  refresh_weather.sh  run_web.sh
src/: main.rs
web/: app.py
web/static/: styles.css
web/templates/: index.html
