[package]
name = "weather-app"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
dirs = "5"